--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,8 @@
 
         <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
 
         <script src="packages/web_components/platform.js"></script>
         <script src="packages/web_components/dart_support.js"></script>
